# sorobn

./: .gitignore  CITATION.cff  README.md  Untitled.ipynb  main.py  pyproject.toml  pytest.ini  setup.py  test.py
.github/actions/install-env/: action.yml
.github/workflows/: demo.yml  publish.yml  test.yml  unit-tests.yml
demo/: Procfile  requirements.txt  setup.sh
examples/: digit-generation.ipynb  sampling-open-problem.ipynb  valid-sampling.ipynb  wordle.ipynb
hedgehog/: __init__.py  bayes_net.py  bn.py  examples.py  gui.py  structure.py  test_bayes_net.py
hedgehog/structure/: __init__.py
rev/: __init__.py  bn.py  dist.py
sorobn/: bayes_net.py  examples.py  gui.py  structure.py  test_bayes_net.py
