[tool.poetry]
name = "sorobn"
version = "0.3.0"
description = "Bayesian networks in Python"
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
vose = "^0.1.0"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
daft = "^0.1.2"
graphviz = "^0.20.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sorobn = 'sorobn:cli_hook'
