[tool.poetry]
name = "sorobn"
version = "0.3.0"
description = "Bayesian networks in Python"
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
vose = "^0.0.1"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
daft = "^0.1.2"
scikit-learn = "^1.2.2"
graphviz = "^0.20.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sorobn = 'sorobn:cli_hook'
