[project]
name = "sorobn"
version = "0.4.1"
description = "Bayesian networks in Python"
readme = "README.md"
authors = [
  { name = "Max Halford", email = "maxhalford25@gmail.com" },
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "vose>=0.2.3",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sorobn"
module-root = ""

[project.scripts]
sorobn = 'sorobn:cli_hook'

